2012-11-05  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.10.0-digiumphones-rc2 Released.

	* Fix a bug which made ConfBridge not record the conference when
	  the recording was initiated from an AMI/CLI command

	  (closes issue ASTERISK-20601)
	  Reported by: Vilius

2012-10-08  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.10.0-digiumphones-rc1 Released.

2012-10-08 14:19 +0000 [r374656]  Automerge script <automerge@asterisk.org>

	* apps/confbridge/include/conf_state.h (added),
	  apps/confbridge/conf_state_multi.c (added),
	  apps/app_confbridge.c, apps/confbridge/conf_state_multi_marked.c
	  (added), apps/confbridge/conf_state_empty.c (added),
	  apps/confbridge/conf_state.c (added),
	  apps/confbridge/conf_state_single.c (added),
	  apps/confbridge/conf_state_inactive.c (added),
	  apps/confbridge/conf_state_single_marked.c (added), /,
	  apps/confbridge/include/confbridge.h: Merged revisions 374652 via
	  svnmerge from file:///srv/subversion/repos/asterisk/branches/10
	  ........ r374652 | mjordan | 2012-10-08 08:46:27 -0500 (Mon, 08
	  Oct 2012) | 46 lines Resolve issues in ConfBridge regarding
	  marked, waitmarked, and unmarked users Thank's to Neil Tallim
	  (flan)'s tireless testing, issue reporting, and patches it became
	  clear that app_confbridge had some complex logic in how it
	  handled interactions between marked, waitmarked, and unmarked
	  users. In particular, there were some areas in which the
	  interactions between the users resulted in inconsistent behavior,
	  and app_confbridge was missing logic in how to handle some corner
	  cases. Some areas included: * Poor handling of mixing unmarked
	  and waitmarked users * Inconsistencies in how MOH and muting was
	  applied to various users * Handling of various announcements for
	  different user profile options flan's patches seem to fix the
	  various issues, but highlighted how hard the code could be to