@@ -1,1 +1,1 @@
-10.10.0-digiumphones-rc2
+10.10.0-digiumphones
